--- a/sem-opt-in-front.pot
+++ b/sem-opt-in-front.pot
@@ -1,25 +1,25 @@
-# Opt-in Front Page pot file.
-# Copyright (C) 2009 Mesoconcepts <http://www.mesoconcepts.com>
+# Copyright (C) 2014 Opt-in Front Page
 # This file is distributed under the same license as the Opt-in Front Page package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: 4.1.1\n"
-"Report-Msgid-Bugs-To: https://tickets.semiologic.com\n"
-"POT-Creation-Date: 2009-12-12 19:37+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"Project-Id-Version: Opt-in Front Page 4.3 dev\n"
+"Report-Msgid-Bugs-To: http://wordpress.org/support/plugin/sem-opt-in-front\n"
+"POT-Creation-Date: 2014-04-22 15:38:57+00:00\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"PO-Revision-Date: 2014-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
-"Content-Transfer-Encoding: 8bit\n"
 
+#. #-#-#-#-#  sem-opt-in-front.pot (Opt-in Front Page 4.3 dev)  #-#-#-#-#
+#. Plugin Name of the plugin/theme
 #: sem-opt-in-front-info.php:2
 msgid "Opt-in Front Page"
 msgstr ""
 
+#. #-#-#-#-#  sem-opt-in-front.pot (Opt-in Front Page 4.3 dev)  #-#-#-#-#
+#. Description of the plugin/theme
 #: sem-opt-in-front-info.php:3
 msgid ""
 "Restricts the access to your front page on an opt-in basis: Only posts "
@@ -27,6 +27,18 @@ msgid ""
 "your front page."
 msgstr ""
 
-#: sem-opt-in-front.php:170
+#: sem-opt-in-front.php:318
 msgid "News"
+msgstr ""
+
+#. Plugin URI of the plugin/theme
+msgid "http://www.semiologic.com/software/opt-in-front/"
+msgstr ""
+
+#. Author of the plugin/theme
+msgid "Denis de Bernardy & Mike Koepke"
+msgstr ""
+
+#. Author URI of the plugin/theme
+msgid "http://www.getsemiologic.com"
 msgstr ""
